2.16.0 (23-01-2024)
- Improvement: RAIDES: add extension point to Attendance Regime Provider
- Bug fix: Add missing labels (XLS RAIDES report) 
- Refactor: Update XSD to RAIDES23 (#UL-REIT-3658)

2.15.13 (12-01-2024)
- Refactor: Replace usage of ShiftType by CourseLoadType
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]
- Bug Fix: Fix registration tuition amount by including other treasury events amount that account as tuition [#UL-IGOT-1569]

2.15.12 (19-07-2023)
- Refactor: Rename invocation of TreasuryEvent::getAmountToPay to TreasuryEvent::getAmountWithVatToPay

2.15.11 (13-05-2023) 
- Refactor: Remove RegistrationStateTypeEnum references

2.15.10 (19-04-2023)
- Bug fix: exclude annulled enrolments (before the end of report period) for international mobility 

2.15.9 (08-03-2023)
- Bug fix: RAIDES - report document ID type "other" as error at log file

2.15.8 (08-03-2023)
- Bug fix: RAIDES - report document ID type "other" as invalid
- Bug fix: RAIDES - Conclusion data - send the descriptive grade in specific conditions
- Bug fix: SAS - calculate the first month of execution year (according to student enrollments)

2.15.7 (13-02-2023)
- Bug fix: add grade entries to RAIDES mappings 

2.15.6 (08-02-2023)
- Bug fix: RAIDES logs
- Refactor: Make compatible with latest version of academic-core

2.15.5 (31-01-2023)
- Bug fix: only fill the OutroProgMobCredito field if the ProgMobilidadeCredito field has the value 2
- Bug fix: only fill the OutroPrograma field if the ProgMobilidade field has the value 2

2.15.4 (27-01-2023)
- Bug fix: label error.Raides.validation.motherSchoolLevel.missing

2.15.3 (26-01-2023)
- Bug fix: Test if escolaridadeAnterior is not empty

2.15.2 (25-01-2023)
- Improvement: RAIDES - add new validations (regime, school level and profession)

2.15.1 (18-01-2023)
- Refactor: Update XSD and logic to RAIDES22

2.15.0 (17-01-2023)
- Refactor: Remove institution unit deprecated slot from raides report request