@@ -1,3 +1,5 @@
+- Bug fix: RAIDES: fill student nationalities according to DGES rules [#qubIT-Fenix-3809]
+
 2.16.0 (23-01-2024)
 - Improvement: RAIDES: add extension point to Attendance Regime Provider
 - Bug fix: Add missing labels (XLS RAIDES report) 
